Disabilitata temporaneamente la traduzione bilingue

--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -32,7 +32,7 @@
     detail: SO.GE.M.A. SpA
     i18n: sogema
   desc:
-    detail: I worked at Company C ...
+    detail: Ho progettato e gestito l'intera infrastruttura del Gruppo, realizzando un progetto di consolidamento e centralizzazione che ha ridotto i costi e permesso a tutti gli utenti (oltre 100) di lavorare in un ambiente funzionale ed uniforme.
     i18n: sogema_desc
   date:
     detail: Gennaio 2006 - Dicembre 2014
