--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ author:  # change following line to your infomation.
 
 # comment
 disqus:  # if you wanna comment feature, go to https://disqus.com/ to get your configuration; if not, comment following two lines.
-#  name: Skyflash
+  name: cristiancastellari-it
 
 # analytics
 ## google analytics
@@ -81,10 +81,6 @@ ga:  # if you wanna this feature, go to https://www.google.com/analytics/ to get
 
 ## google optimize
 go:
-  # id:
-
-## growingIO
-gio:  # if you wanna this feature, go to https://www.growingio.com/ to get your configuration; if not, comment following line.
   # id:
 
 ## donation
