--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,15 @@ kramdown:
 lang: it_IT
 permalink: /blog/:categories/:title/
 
+social:
+  name: Cristian Castellari
+  links:
+    - https://twitter.com/BloggerStanco
+    - https://www.facebook.com/cristian.castellari
+    - https://www.linkedin.com/in/cristiancastellari/
+    - https://plus.google.com/u/0/+CristianCastellari
+    - https://github.com/Skyflash
+
 twitter:
   card: summary
   username: BloggerStanco
