--- a/_config.yml
+++ b/_config.yml
@@ -101,11 +101,13 @@ blog_carousel: off  # blog page carousel switch
 
 plugins:
   - jekyll-seo-tag
+  - jekyll-redirect-from
 
 # scss
 sass:
   sass_dir: _sass
   style: compressed
+
 
 # Build settings
 encoding: utf-8
