--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
   "dependencies": {
     "animate.css": "^3.5.2",
     "atob": "^2.1.2",
-    "bootstrap": "^4.1.2",
-    "chart.js": "^2.7.2",
-    "colors": "^1.1.2",
+    "bootstrap": "^3.4.0",
+    "chart.js": "^2.7.3",
+    "colors": "^1.3.3",
     "components-font-awesome": "^4.7.0",
     "font-mfizz": "^2.4.1",
     "gritter": "^1.7.4",
@@ -30,8 +30,10 @@
     "jquery-slimscroll": "^1.3.8",
     "metismenu": "^2.5.2",
     "normalize.css": "^4.2.0",
+    "npm": "^6.7.0",
     "pace-progress": "^1.0.2",
     "peity": "^3.2.0",
+    "popper.js": "^1.14.6",
     "purify-css": "^1.1.9",
     "wowjs": "^1.1.2"
   },
