bing verification code

--- a/_config.yml
+++ b/_config.yml
@@ -50,6 +50,7 @@ twitter:
 
 webmaster_verifications:
   google: FByo2xcDR6RaUId2DdQjhAmq9YMjlEhVlL0OgK8KDzU
+  bing: FCA4B700F192727565A2354B488A3DD5
 
 #
 ###################################
