--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,7 @@ author:  # change following line to your infomation.
   facebook_username: cristian.castellari  # Leave blank if you don't have now
   twitter: BloggerStanco
   email: c.castellari@gmail.com  # Leave blank if you don't have now
-  cv: https://cv.cristiancastellari.it  # An online CV can be printed as PDF, leave blank if you don't have now
+  cv: https://cristiancastellari.it/static/assets/cv/CV_Cristian_Castellari.pdf  # An online CV can be printed as PDF, leave blank if you don't have now
 
 
   # skill icons are on avatar's left and right side. Reference urls are http://fontawesome.io/ and http://fizzed.com/oss/font-mfizz
