--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/Skyflash/skyflash.github.io/#readme",
   "dependencies": {
-    "animate.css": "^3.5.2",
+    "animate.css": "^3.7.2",
     "atob": "^2.1.2",
     "bootstrap": "^3.4.1",
     "chart.js": "^2.8.0",
@@ -30,15 +30,16 @@
     "jquery-slimscroll": "^1.3.8",
     "metismenu": "^2.5.2",
     "normalize.css": "^4.2.0",
-    "npm": "^6.9.0",
+    "npm": "^6.10.1",
     "pace-progress": "^1.0.2",
-    "peity": "^3.2.0",
+    "peity": "^3.3.0",
     "popper.js": "^1.15.0",
-    "purify-css": "^1.1.9",
+    "purify-css": "^1.2.5",
     "wowjs": "^1.1.2"
   },
   "devDependencies": {
     "clean-css": "^4.2.1",
+    "mem": "^5.1.1",
     "shelljs": "^0.7.6",
     "uglify-js": "^2.7.5"
   }
