--- a/package.json
+++ b/package.json
@@ -26,21 +26,21 @@
     "components-font-awesome": "^4.7.0",
     "font-mfizz": "^2.4.1",
     "gritter": "^1.7.4",
-    "jquery": "^3.4.0",
+    "jquery": "^3.4.1",
     "jquery-slimscroll": "^1.3.8",
     "metismenu": "^2.5.2",
     "normalize.css": "^4.2.0",
-    "npm": "^6.10.1",
+    "npm": ">=6.13.4",
     "pace-progress": "^1.0.2",
     "peity": "^3.3.0",
-    "popper.js": "^1.15.0",
+    "popper.js": "^1.16.0",
     "purify-css": "^1.2.5",
-    "wowjs": "^1.1.2"
+    "wowjs": "^1.1.3"
   },
   "devDependencies": {
     "clean-css": "^4.2.1",
-    "mem": "^5.1.1",
-    "shelljs": "^0.7.6",
-    "uglify-js": "^2.7.5"
+    "mem": "^6.0.1",
+    "shelljs": "^0.8.3",
+    "uglify-js": "^3.7.2"
   }
 }
