Disclaimer e Privacy/Cookies pages

--- a/_data/blog.yml
+++ b/_data/blog.yml
@@ -10,6 +10,9 @@
 - name: HTML
   href: /html/
 
+- name: ITIL
+  href: /itil/
+  
 - name: Linux
   href: /linux/
 
@@ -19,12 +22,9 @@
 - name: Games
   href: /games/
   
-- name: Mac
-  href: /mac/
-
 - name: Tools
   href: /tools/
-
+  
 - name: Life
   href: /life/
 
