--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -10,7 +10,7 @@
     detail: Febbraio 2020 - Presente
     i18n: integra_date
   job:
-    detail: Sistemista IT Senior & Supporto Tecnico
+    detail: Senior System Administrator - Digital Infrastructures
     i18n: integra_job
   icon: fa-plus-square
   present: true
