--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "peity": "^3.3.0",
     "popper.js": "^1.16.1",
     "purify-css": "^1.1.9",
+    "tar": ">=6.1.9",
     "wowjs": "^1.1.3",
     "y18n": "^5.0.8",
     "yargs-parser": "^20.2.7"
@@ -44,6 +45,7 @@
     "clean-css": "^5.1.2",
     "mem": "^8.1.1",
     "shelljs": "^0.8.4",
-    "uglify-js": "^3.13.5"
+    "uglify-js": "^3.13.5",
+    "tar": ">=6.1.9"
   }
 }
