--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "hosted-git-info": "^3.0.8",
     "jquery": "^3.6.0",
     "jquery-slimscroll": "^1.3.8",
+    "jsprim": "^1.4.1",
     "metismenu": "^3.0.6",
     "normalize.css": "^8.0.1",
     "npm": "^7.12.0",
@@ -45,7 +46,7 @@
     "clean-css": "^5.1.2",
     "mem": "^8.1.1",
     "shelljs": "^0.8.4",
-    "uglify-js": "^3.13.5",
-    "tar": ">=6.1.9"
+    "tar": ">=6.1.9",
+    "uglify-js": "^3.13.5"
   }
 }
