--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -10,7 +10,7 @@
     detail: Dicembre 2021 - Presente
     i18n: integra_date
   job:
-    detail: Digital Infrastructures Unit Manager
+    detail: IT & Service Management Unit Manager
     i18n: integra_job
   icon: fa-plus-square
   present: true
